--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,8 +1,8 @@
-name: Deploy Astro site to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -10,57 +10,38 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-env:
-  BUILD_PATH: "."  # root of repo
-
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: npm
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ${{ env.BUILD_PATH }}
 
       - name: Build Astro site
-        run: npx astro build --site "https://spaceforneurodiversity.org"
-        working-directory: ${{ env.BUILD_PATH }}
+        run: npm run build
 
-      - name: Add .nojekyll and CNAME
-        run: |
-          touch ${{ env.BUILD_PATH }}/dist/.nojekyll
-          echo "spaceforneurodiversity.org" > ${{ env.BUILD_PATH }}/dist/CNAME
+      - name: Verify build output
+        run: ls -al dist
 
-      - name: Upload build artifact
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ${{ env.BUILD_PATH }}/dist
+          path: dist
 
   deploy:
-    name: Deploy
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: github-pages
-
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-      - name: Output deployed site URL
-        run: echo "Site deployed at ${{ steps.deployment.outputs.page_url }}"
